--- a/.github/workflows/test_atis_decoding.yml
+++ b/.github/workflows/test_atis_decoding.yml
@@ -12,7 +12,6 @@ jobs:
   decode-atis:
     runs-on: ubuntu-latest
 
-    # 🔑 Injection de la clé Mistral depuis GitHub Secrets
     env:
       MISTRAL_API_KEY: ${{ secrets.MISTRAL_API_KEY }}
 
@@ -28,6 +27,7 @@ jobs:
         run: |
           python3 -m venv venv
           source venv/bin/activate
+          pip install --upgrade pip
           pip install requests beautifulsoup4
 
       # 3️⃣ Décoder le message ATIS via Mistral
