--- a/.github/workflows/test_atis_decoding.yml
+++ b/.github/workflows/test_atis_decoding.yml
@@ -38,11 +38,13 @@ jobs:
           source venv/bin/activate
           python3 update_index.py
 
-      # 5️⃣ Commit et push les modifications
+      # 5️⃣ Commit et push les modifications avec token sécurisé
       - name: Commit et push des changements
+        env:
+          ATIS_TOKEN: ${{ secrets.ATIS_TOKEN }}
         run: |
           git config --global user.name "GitHub Actions"
           git config --global user.email "actions@github.com"
           git add index.html atis.json atis_structured.html
           git commit -m "Mise à jour manuelle de l'ATIS (test)" || echo "No changes to commit"
-          git push
+          git push https://valoch29:${ATIS_TOKEN}@github.com/valoch29/ReadATIS.git HEAD:main
