--- a/.github/workflows/decode_atis.yml
+++ b/.github/workflows/decode_atis.yml
@@ -19,26 +19,38 @@ jobs:
         with:
           token: ${{ secrets.ATIS_TOKEN }}
 
-      # 2️⃣ Installer Python et dépendances
+      # 2️⃣ Installer Git
+      - name: Installer Git
+        run: sudo apt-get update && sudo apt-get install -y git
+
+      # 3️⃣ Configurer l'identité Git
+      - name: Configurer Git
+        run: |
+          git config --global user.name "GitHub Actions"
+          git config --global user.email "actions@github.com"
+
+      # 4️⃣ Installer Python et dépendances
       - name: Installer dépendances Python
         run: |
           pip install --upgrade pip
           pip install beautifulsoup4
 
-      # 3️⃣ Décoder et formater le message ATIS
+      # 5️⃣ Décoder et formater le message ATIS
       - name: Décoder et formater le message ATIS
         run: python3 process_atis.py ${{ github.event.inputs.atis_file }}
 
-      # 4️⃣ Mettre à jour index.html
+      # 6️⃣ Mettre à jour index.html
       - name: Mettre à jour index.html
         run: python3 update_index.py
 
-      # 5️⃣ Commit et push des changements (une ligne pour éviter les erreurs de fin de fichier)
+      # 7️⃣ Commit et push des changements
       - name: Commit et push des changements
         env:
           ATIS_TOKEN: ${{ secrets.ATIS_TOKEN }}
-        run: git config --global user.name "GitHub Actions" && \
-             git config --global user.email "actions@github.com" && \
-             git add index.html atis.json atis_structured.html && \
-             git diff-index --quiet HEAD || (git commit -m "🧩 Mise à jour manuelle ATIS ($(date +'%Y-%m-%d %H:%M:%S'))" && \
-             git push https://valoch29:${ATIS_TOKEN}@github.com/valoch29/ReadATIS.git HEAD:main)
+        run: |
+          git add index.html atis.json atis_structured.html
+          if ! git diff-index --quiet HEAD; then
+            git commit -m "🧩 Mise à jour manuelle ATIS ($(date +'%Y-%m-%d %H:%M:%S'))"
+            git push https://valoch29:${ATIS_TOKEN}@github.com/valoch29/ReadATIS.git HEAD:main
+          else
+            echo "Aucun changement détecté — pas de commit."
