--- a/.github/workflows/whisper_transcribe.yml
+++ b/.github/workflows/whisper_transcribe.yml
@@ -1,9 +1,12 @@
-name: ATIS Transcription Automatique
+name: Transcription ATIS avec Whisper
 
 on:
-  schedule:
-    - cron: '22,52 * * * *'   # toutes les 30 minutes
-  workflow_dispatch:          # déclenchement manuel possible
+  workflow_dispatch:
+    inputs:
+      audio_artifact:
+        description: "Nom de l'artefact audio (.wav)"
+        required: true
+        default: "atis_tallinn.wav"
 
 jobs:
   transcribe-atis:
@@ -13,63 +16,35 @@ jobs:
       # 1️⃣ Récupérer le dépôt
       - name: Checkout repository
         uses: actions/checkout@v4
-        with:
-          token: ${{ secrets.ATIS_TOKEN }}
 
-      # 2️⃣ Installer dépendances système
-      - name: Installer dépendances système
+      # 2️⃣ Installer Python et Whisper
+      - name: Installer Python et Whisper
         run: |
-          sudo apt-get update -qq
-          sudo apt-get install -y ffmpeg curl
-
-      # 3️⃣ Installer Whisper
-      - name: Installer Whisper
-        run: |
+          python3 -m venv venv
+          source venv/bin/activate
           pip install --upgrade pip
           pip install git+https://github.com/openai/whisper.git
 
-      # 4️⃣ Enregistrer le flux ATIS
-      - name: Enregistrer le flux ATIS (Tallinn)
-        run: |
-          echo "🎧 Téléchargement du flux LiveATC Tallinn..."
-          curl -s -A "Mozilla/5.0" -e "https://www.liveatc.net/" "https://s1-fmt2.liveatc.net/eetn2_atis" | \
-          ffmpeg -i pipe:0 -t 120 -y atis_tallinn.mp3
-          ls -lh atis_tallinn.mp3
+      # 3️⃣ Télécharger l’audio depuis l’artefact
+      - name: Télécharger l’audio
+        uses: actions/download-artifact@v4
+        with:
+          name: atis-audio
+          path: .
 
-      # 5️⃣ Transcrire l’audio avec Whisper (TXT pur)
-      - name: Transcrire avec Whisper
+      # 4️⃣ Transcrire avec Whisper
+      - name: Transcrire ATIS
         run: |
-          echo "🗣️ Transcription en cours avec Whisper..."
-          whisper atis_tallinn.mp3 --model small --language English --output_format txt --output_dir .
-          mv atis_tallinn.txt ATIS_tallinn.txt || mv atis_tallinn.*.txt ATIS_tallinn.txt
-          echo "✅ Transcription générée :"
-          head -n 10 ATIS_tallinn.txt
+          source venv/bin/activate
+          whisper ${{ github.event.inputs.audio_artifact }} \
+                  --model small \
+                  --language English \
+                  --output_format txt \
+                  --output_dir .
 
-      # 6️⃣ Nettoyer le texte (enlever timestamps si Whisper en met)
-      - name: Nettoyer la transcription
-        run: |
-          if grep -q "\[00:" ATIS_tallinn.txt; then
-            echo "⚠️ Suppression des timestamps..."
-            sed -E 's/\[[0-9:. -\>]+\]//g' ATIS_tallinn.txt > cleaned.txt
-            mv cleaned.txt ATIS_tallinn.txt
-          fi
-
-      # 7️⃣ Commit et push le fichier mis à jour
-      - name: Commit et push la transcription
-        run: |
-          git config --global user.name "GitHub Actions"
-          git config --global user.email "actions@github.com"
-          git add ATIS_tallinn.txt
-          if ! git diff-index --quiet HEAD; then
-            git commit -m "🔁 Mise à jour automatique de la transcription ATIS ($(date +'%Y-%m-%d %H:%M:%S'))"
-            git push https://valoch29:${{ secrets.ATIS_TOKEN }}@github.com/valoch29/ReadATIS.git HEAD:main
-          else
-            echo "Aucun changement détecté — pas de commit."
-          fi
-
-      # 8️⃣ (Optionnel) Upload artefact pour debug
-      - name: Upload du fichier de transcription (debug)
+      # 5️⃣ Upload du fichier de transcription
+      - name: Upload transcription
         uses: actions/upload-artifact@v4
         with:
-          name: ATIS_tallinn
-          path: ATIS_tallinn.txt
+          name: transcription-atis
+          path: atis_tallinn.txt
