--- a/.github/workflows/whisper_transcribe.yml
+++ b/.github/workflows/whisper_transcribe.yml
@@ -2,18 +2,13 @@ name: Transcription ATIS avec Whisper
 
 on:
   workflow_dispatch:
-    inputs:
-      audio_file:
-        description: "Nom du fichier audio à transcrire (ex: atis_tallinn.wav)"
-        required: true
-        default: "atis_tallinn.wav"
 
 jobs:
   transcribe-atis:
     runs-on: ubuntu-latest
 
     steps:
-      # 1️⃣ Récupérer le dépôt
+      # 1️⃣ Checkout repository
       - name: Checkout repository
         uses: actions/checkout@v4
 
@@ -23,36 +18,24 @@ jobs:
           python3 -m venv venv
           source venv/bin/activate
           pip install --upgrade pip
-          pip install git+https://github.com/openai/whisper.git
+          pip install git+https://github.com/openai/whisper.git beautifulsoup4
 
-      # 3️⃣ Télécharger l’artefact audio du workflow d’enregistrement
-      - name: Télécharger l’artefact audio
-        uses: actions/download-artifact@v4
-        with:
-          name: atis-audio
-          path: .
-
-      # 4️⃣ Transcrire l’audio avec Whisper
+      # 3️⃣ Transcrire l’audio en texte
       - name: Transcrire ATIS
         run: |
           source venv/bin/activate
-          whisper ${{ github.event.inputs.audio_file }} \
+          whisper atis_tallinn.wav \
             --model small \
             --language English \
             --output_format txt \
             --output_dir .
 
-      # 5️⃣ Renommer la transcription de sortie pour avoir un nom fixe
-      - name: Renommer transcription
+      # 4️⃣ Renommer la transcription pour toujours avoir le même fichier
+      - name: Normaliser nom transcription
         run: |
-          source venv/bin/activate
-          AUDIO_FILE="${{ github.event.inputs.audio_file }}"
-          TXT_FILE="${AUDIO_FILE%.wav}.txt"
-          mv "$TXT_FILE" atis_tallinn.txt
+          mv atis_tallinn.txt atis_tallinn.txt || true
 
-      # 6️⃣ Upload de la transcription comme artefact
-      - name: Upload transcription
-        uses: actions/upload-artifact@v4
-        with:
-          name: atis-transcription
-          path: atis_tallinn.txt
+      # 5️⃣ Afficher la transcription dans les logs pour vérification
+      - name: Afficher transcription
+        run: |
+          cat atis_tallinn.txt
