--- a/.github/workflows/record-atis.yml
+++ b/.github/workflows/record-atis.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   record-atis:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
 
     steps:
       - name: Checkout repository
@@ -27,3 +27,18 @@ jobs:
       - name: Convertir MP3 en WAV mono 16kHz
         run: |
           ffmpeg -i atis_tallinn.mp3 -ac 1 -ar 16000 atis_tallinn.wav
+
+      - name: Vérifier les fichiers audio
+        run: |
+          echo "📂 Contenu du répertoire :"
+          ls -lh
+          echo "🎧 Détails sur le fichier WAV :"
+          ffprobe -hide_banner -i atis_tallinn.wav || true
+
+      - name: Upload fichiers audio comme artefacts
+        uses: actions/upload-artifact@v4
+        with:
+          name: atis-audio
+          path: |
+            atis_tallinn.mp3
+            atis_tallinn.wav
