--- a/.github/workflows/whisper_transcribe.yml
+++ b/.github/workflows/whisper_transcribe.yml
@@ -1,4 +1,4 @@
-name: Transcription ATIS avec Whisper
+name: Transcription ATIS rapide
 
 on:
   workflow_dispatch:
@@ -6,6 +6,8 @@ on:
 jobs:
   transcribe-atis:
     runs-on: ubuntu-22.04
+    permissions:
+      contents: write  # nécessaire pour push via GITHUB_TOKEN
 
     steps:
       - name: Checkout repository
@@ -16,15 +18,26 @@ jobs:
           sudo apt-get update -qq
           sudo apt-get install -y ffmpeg python3 python3-pip git
 
-      - name: Installer Whisper
-        run: |
+      - name: Installer Whisper et dépendances (cache pip)
+        uses: actions/cache@v3
+        with:
+          path: ~/.cache/pip
+          key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
+          restore-keys: |
+            ${{ runner.os }}-pip-
+      - run: |
           pip install --upgrade openai-whisper
 
-      - name: Transcrire ATIS avec Whisper (anglais)
+      - name: Transcrire ATIS avec Whisper (modèle small)
         run: |
-          whisper atis_tallinn.wav --model medium --language en --output_format txt --output_dir .
+          whisper atis_tallinn.wav \
+            --model small \
+            --language en \
+            --output_format txt \
+            --output_dir . \
+            --verbose
 
-      - name: Corriger et nettoyer la transcription
+      - name: Nettoyer la transcription
         run: |
           python3 <<'PYCODE'
           import re
@@ -36,7 +49,6 @@ jobs:
           with open(input_file, "r") as f:
               text = f.read()
 
-          # Corrections typiques pour ATIS
           corrections = {
               r"\blitres?\b": "metres",
               r"\bniner\b": "nine",
@@ -45,14 +57,11 @@ jobs:
               r"\bvisibility (\d+)\s*litres\b": r"visibility \1 metres",
               r"\bQNH\s*0\s*niner\s*niner\s*7\b": "QNH 997",
           }
-
           for pattern, repl in corrections.items():
               text = re.sub(pattern, repl, text, flags=re.IGNORECASE)
 
-          # Nettoyer espaces et répétitions
           text = re.sub(r"\s+", " ", text).strip()
           timestamp = datetime.utcnow().strftime("%Y-%m-%d %H:%M UTC")
-
           with open(output_file, "w") as f:
               f.write(f"ATIS Tallinn transcription ({timestamp}):\n\n{text}\n")
 
@@ -68,4 +77,5 @@ jobs:
           git config user.email "actions@github.com"
           git add atis_tallinn_clean.txt
           git commit -m "Mise à jour transcription ATIS ($(date +'%Y-%m-%d %H:%M'))" || echo "Rien à commit"
-          git push
+          git remote set-url origin https://${GITHUB_ACTOR}:${GITHUB_TOKEN}@github.com/valoch29/ReadATIS.git
+          git push origin main
