--- a/.github/workflows/whisper_transcribe.yml
+++ b/.github/workflows/whisper_transcribe.yml
@@ -86,7 +86,7 @@ jobs:
         run: |
           git config user.name "github-actions"
           git config user.email "actions@github.com"
-          git add atis_tallinn_clean.txt
+          git add atis_tallinn.txt
           git commit -m "Mise à jour transcription ATIS ($(date +'%Y-%m-%d %H:%M'))" || echo "Rien à commit"
           git remote set-url origin https://${GITHUB_ACTOR}:${GITHUB_TOKEN}@github.com/${{ github.repository }}
           git push origin main
