--- a/.github/workflows/decode_atis.yml
+++ b/.github/workflows/decode_atis.yml
@@ -1,48 +1,81 @@
-name: Décodage ATIS (manuel)
+name: Format ATIS pour FMS
 
 on:
   workflow_dispatch:
-    inputs:
-      atis_file:
-        description: "Nom du fichier ATIS à décoder (ex: ATIS_tallinn.txt)"
-        required: true
-        default: "ATIS_tallinn.txt"
+  schedule:
+    - cron: '23,53 * * * *'  # juste après l'enregistrement/transcription
 
 jobs:
-  decode-atis:
-    runs-on: ubuntu-latest
+  format-atis:
+    runs-on: ubuntu-22.04
+    permissions:
+      contents: write
 
     steps:
-      # 1️⃣ Cloner le dépôt
       - name: Checkout repository
         uses: actions/checkout@v4
         with:
-          token: ${{ secrets.ATIS_TOKEN }}
+          token: ${{ secrets.GITHUB_TOKEN }}
 
-      # 2️⃣ Installer Git et Python
-      - name: Installer Git et Python
+      - name: Installer Python
         run: |
-          sudo apt-get update
-          sudo apt-get install -y git python3 python3-pip
+          sudo apt-get update -qq
+          sudo apt-get install -y python3 python3-pip
 
-      # 3️⃣ Configurer l'identité Git
-      - name: Configurer Git
-        run: git config --global user.name "GitHub Actions" && git config --global user.email "actions@github.com"
+      - name: Formater ATIS en style FMS
+        run: |
+          python3 <<'PYCODE'
+          import re
+          from datetime import datetime
 
-      # 4️⃣ Installer dépendances Python
-      - name: Installer dépendances Python
-        run: pip3 install --upgrade pip beautifulsoup4
+          input_file = "atis_tallinn.txt"
+          output_file = "atis_tallinn_fms.txt"
 
-      # 5️⃣ Décoder et formater le message ATIS
-      - name: Décoder et formater le message ATIS
-        run: python3 process_atis.py ${{ github.event.inputs.atis_file }}
+          with open(input_file, "r", encoding="utf-8") as f:
+              text = f.read()
 
-      # 6️⃣ Mettre à jour index.html
-      - name: Mettre à jour index.html
-        run: python3 update_index.py
+          # 1️⃣ Extraire info principale (simplifié)
+          match_info = re.search(r"[iI]nformation\s+([A-Z])", text)
+          atis_letter = match_info.group(1) if match_info else "X"
 
-      # 7️⃣ Commit et push des changements (une seule ligne)
-      - name: Commit et push des changements
+          match_time = re.search(r"[tT]ime\s+(\d{3,4})", text)
+          atis_time = match_time.group(1) if match_time else "0000"
+
+          match_wind = re.search(r"[wW]ind.*?(\d{1,3})\s*degrees[,/ ]+(\d+)\s*knots", text)
+          wind = f"{match_wind.group(1).zfill(3)}{match_wind.group(2).zfill(2)}KT" if match_wind else "00000KT"
+
+          match_vis = re.search(r"[vV]isibility.*?(\d+)\s*kilometers?", text)
+          visibility = f"{int(match_vis.group(1))*0.539957:.0f}SM" if match_vis else "10SM"
+
+          # Exemple très simple pour clouds
+          cloud_matches = re.findall(r"(overcast|broken|scattered|few)[ ,]*(\d+)", text, re.IGNORECASE)
+          clouds = " ".join([f"{m[1]}{m[0][:2].upper()}" for m in cloud_matches]) if cloud_matches else ""
+
+          # Runway in use
+          match_rwy = re.search(r"[rR]unway\s+(\d+)", text)
+          runway = match_rwy.group(1) if match_rwy else "XX"
+
+          # Mettre tout ensemble style FMS
+          fms_text = (
+              f"EETN ATIS INFO {atis_letter} {atis_time}Z. "
+              f"{wind} {visibility} {clouds} "
+              f"RWY {runway} IN USE. "
+              "ADVS YOU HAVE INFO {atis_letter}."
+          )
+
+          with open(output_file, "w", encoding="utf-8") as f:
+              f.write(fms_text + "\n")
+
+          print("✅ ATIS formaté style FMS :")
+          print(fms_text)
+          PYCODE
+
+      - name: Commit et push ATIS FMS
         env:
-          ATIS_TOKEN: ${{ secrets.ATIS_TOKEN }}
-        run: git add index.html atis.json atis_structured.html && git diff-index --quiet HEAD || git commit -m "🧩 Mise à jour manuelle ATIS ($(date +'%Y-%m-%d %H:%M:%S'))" && git push https://valoch29:${ATIS_TOKEN}@github.com/valoch29/ReadATIS.git HEAD:main
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          git config user.name "github-actions"
+          git config user.email "actions@github.com"
+          git add atis_tallinn_fms.txt
+          git commit -m "Mise à jour ATIS format FMS ($(date +'%Y-%m-%d %H:%M'))" || echo "Rien à commit"
+          git push
